--- a/backend/package.json
+++ b/backend/package.json
@@ -14,34 +14,34 @@
     "test:coverage": "DOTENV_CONFIG_PATH=./.env.test.local jest --coverage"
   },
   "devDependencies": {
-    "eslint": "^8.19.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.3"
+    "eslint": "~8.19.0",
+    "eslint-config-airbnb-base": "~15.0.0",
+    "eslint-config-prettier": "~8.5.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-prettier": "~4.2.1",
+    "jest": "~29.6.2",
+    "nodemon": "~3.0.1",
+    "prettier": "~2.7.1",
+    "supertest": "~6.3.3"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "debug": "^4.3.4",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
-    "mongoos": "^0.0.1-security",
-    "mongoose": "^7.4.2",
-    "mongoose-autopopulate": "^1.0.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.6.0",
-    "passport-local-mongoose": "^8.0.0",
-    "password-validator": "^5.3.0",
-    "pug": "^3.0.2"
+    "axios": "^1.7.7",
+    "connect-mongo": "~5.0.0",
+    "cookie-parser": "~1.4.6",
+    "cors": "~2.8.5",
+    "debug": "~4.3.4",
+    "dotenv": "~16.3.1",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "http-errors": "~2.0.0",
+    "mongoos": "~0.0.1-security",
+    "mongoose": "^7.8.2",
+    "mongoose-autopopulate": "~1.0.1",
+    "morgan": "~1.10.0",
+    "passport": "~0.6.0",
+    "passport-local-mongoose": "~8.0.0",
+    "password-validator": "~5.3.0",
+    "pug": "~3.0.2"
   },
   "jest": {
     "setupFiles": [
