--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,24 +11,24 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.1",
-    "pinia": "^2.1.4",
-    "popper.js": "^1.16.1",
-    "pug": "^3.0.2",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "axios": "^1.7.7",
+    "bootstrap": "~5.3.1",
+    "pinia": "~2.1.4",
+    "popper.js": "~1.16.1",
+    "pug": "~3.0.2",
+    "vue": "~3.3.4",
+    "vue-router": "~4.2.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.46.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.6",
-    "vitest": "^0.33.0"
+    "@rushstack/eslint-patch": "~1.3.2",
+    "@vitejs/plugin-vue": "~4.2.3",
+    "@vue/eslint-config-prettier": "~8.0.0",
+    "@vue/test-utils": "~2.4.1",
+    "eslint": "~8.46.0",
+    "eslint-plugin-vue": "~9.15.1",
+    "jsdom": "~22.1.0",
+    "prettier": "~3.0.0",
+    "vite": "^4.5.5",
+    "vitest": "~0.33.0"
   }
 }
