--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,11 +12,16 @@ ADD package.json package-lock.json ./
 RUN npm install
 
 # Add the rest of the files
+ADD .eslintrc.cjs /app/.eslintrc.cjs
+ADD .prettierrc.json /app/.prettierrc.json
 ADD index.html /app/index.html
 ADD vite.config.js /app/vite.config.js
 ADD vitest.config.js /app/vitest.config.js
 ADD public /app/public
 ADD src /app/src
+
+# Expose the port that the app will run on
+EXPOSE 5173
 
 # Run the app
 CMD ["npm", "run", "dev"]
