--- a/backend/package.json
+++ b/backend/package.json
@@ -14,34 +14,38 @@
     "test:coverage": "DOTENV_CONFIG_PATH=./.env.test.local jest --coverage"
   },
   "devDependencies": {
-    "eslint": "~8.19.0",
-    "eslint-config-airbnb-base": "~15.0.0",
-    "eslint-config-prettier": "~8.5.0",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-prettier": "~4.2.1",
-    "jest": "~29.6.2",
-    "nodemon": "~3.0.1",
-    "prettier": "~2.7.1",
-    "supertest": "~6.3.3"
+    "connect-mongo": "^5.1.0",
+    "debug": "^4.4.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "~5.2.5",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0"
   },
   "dependencies": {
+    "@eslint/config-array": "^0.20.0",
+    "@eslint/object-schema": "^2.1.6",
     "axios": "^1.7.7",
-    "connect-mongo": "~5.0.0",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.6",
     "cors": "~2.8.5",
-    "debug": "~4.3.4",
-    "dotenv": "~16.3.1",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "glob": "^11.0.1",
     "http-errors": "~2.0.0",
     "mongoos": "~0.0.1-security",
-    "mongoose": "^7.8.2",
-    "mongoose-autopopulate": "~1.0.1",
+    "mongoose": "^8.13.1",
+    "mongoose-autopopulate": "^1.1.0",
     "morgan": "~1.10.0",
-    "passport": "~0.6.0",
-    "passport-local-mongoose": "~8.0.0",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0",
     "password-validator": "~5.3.0",
-    "pug": "~3.0.2"
+    "pug": "~3.0.2",
+    "rimraf": "^6.0.1",
+    "superagent": "^10.2.0"
   },
   "jest": {
     "setupFiles": [
