--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "axios": "^1.8.4",
     "bootstrap": "~5.3.1",
-    "pinia": "~2.1.4",
-    "popper.js": "~1.16.1",
+    "pinia": "^2.1.7",
     "pug": "~3.0.2",
     "vite": "^6.2.7",
     "vitest": "^3.1.1",
-    "vue": "~3.3.4",
-    "vue-router": "~4.2.4"
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "~1.3.2",
