--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.6",
     "cors": "~2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "glob": "^11.0.1",
@@ -40,6 +40,7 @@
     "mongoose": "^8.13.1",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "~1.10.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
     "password-validator": "~5.3.0",
